Further work.
Calmed bootstrapping so it's not swamping the system. Will need rated
limiting there.

Now have a stuck handful of joins that don't seem to join nor be gc'd